--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.3-rc.0",
     "nodemon": "^2.0.15",
+    "pg-promise": "^10.11.1",
     "sequelize": "^6.9.0"
   }
 }
